MATP-966 Cluster UI

--- a/packages/server-package/pom.xml
+++ b/packages/server-package/pom.xml
@@ -21,6 +21,10 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>cluster-rpc-server</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>misc</artifactId>
     </dependency>
     <dependency>
