--- a/webui/pom.xml
+++ b/webui/pom.xml
@@ -56,6 +56,7 @@
   <modules>
     <module>webui-admin</module>
     <module>webui-core</module>
+    <module>webui-cluster</module>
     <module>webui-package</module>
   </modules>
   <repositories>
