--- a/pom.xml
+++ b/pom.xml
@@ -377,6 +377,11 @@
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
+        <artifactId>webui-dataflow</artifactId>
+        <version>4.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
         <artifactId>webui-cluster</artifactId>
         <version>4.0.0-SNAPSHOT</version>
       </dependency>
