--- a/webui/webui-strategyengine/pom.xml
+++ b/webui/webui-strategyengine/pom.xml
@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.marketcetera</groupId>
-  <artifactId>webui-strategyengine</artifactId>
+  <artifactId>webui-dataflow</artifactId>
   <version>4.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-  <name>Web UI Strategy Engine</name>
+  <name>Web UI Data Flow</name>
   <parent>
     <groupId>org.marketcetera</groupId>
     <artifactId>webui-parent</artifactId>
