MATP-966 Work on data flows UI

--- a/webui/webui-package/src/main/resources/application.properties
+++ b/webui/webui-package/src/main/resources/application.properties
@@ -4,6 +4,6 @@ host.port=8998
 # data flow engines
 #
 # todo: might be nice to connect to the whole cluster somehow
-#dataflow.engine-descriptors[0].name=Main Data Flow Engine
+dataflow.engine-descriptors[0].name=Main Data Flow Engine
 dataflow.engine-descriptors[0].hostname=localhost
 dataflow.engine-descriptors[0].port=8998
