--- a/webui/webui-core/pom.xml
+++ b/webui/webui-core/pom.xml
@@ -32,6 +32,10 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>dataflow-rpc-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>fix-rpc-core</artifactId>
     </dependency>
     <dependency>
