--- a/webui/pom.xml
+++ b/webui/pom.xml
@@ -58,7 +58,7 @@
     <module>webui-core</module>
     <module>webui-cluster</module>
     <module>webui-package</module>
-    <module>webui-strategyengine</module>
+    <module>webui-dataflow</module>
   </modules>
   <repositories>
     <repository>
