--- a/webui/webui-cluster/pom.xml
+++ b/webui/webui-cluster/pom.xml
@@ -32,6 +32,10 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>fix-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>dataflow-api</artifactId>
     </dependency>
     <dependency>
