--- a/webui/webui-admin/pom.xml
+++ b/webui/webui-admin/pom.xml
@@ -36,6 +36,10 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>fix-rpc-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>dataflow-api</artifactId>
     </dependency>
     <dependency>
