--- a/pom.xml
+++ b/pom.xml
@@ -815,7 +815,7 @@
         <plugin>
           <groupId>com.mysema.maven</groupId>
           <artifactId>apt-maven-plugin</artifactId>
-          <version>1.1.1</version>
+          <version>1.1.3</version>
           <executions>
             <execution>
               <phase>generate-sources</phase>
@@ -850,7 +850,7 @@
         <!-- jar generation. -->
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>2.4</version>
+          <version>3.1.0</version>
           <executions>
             <execution>
               <id>build-test-jar</id>
@@ -959,7 +959,7 @@
         <!-- mvn compile -->
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.0.2</version>
+          <version>3.8.0</version>
           <configuration>
             <source>1.${mvn.javase.version}</source>
             <target>1.${mvn.javase.version}</target>
@@ -968,13 +968,12 @@
         <!-- mvn javadoc:* -->
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.5</version>
+          <version>3.0.1</version>
         </plugin>
         <!-- mvn assembly:* -->
         <plugin>
           <artifactId>maven-assembly-plugin</artifactId>
-          <!-- Version 2.2-beta-2 throws NPE under dependency management. -->
-          <version>2.3</version>
+          <version>3.1.0</version>
           <configuration>
             <finalName>${project.artifactId}</finalName>
             <appendAssemblyId>false</appendAssemblyId>
@@ -986,9 +985,8 @@
     <plugins>
       <!-- source jar generation -->
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>2.1.2</version>
+        <version>3.0.1</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -1195,7 +1193,7 @@
     </repository>
     <repository>
       <id>internal</id>
-      <url>http://repo.marketcetera.org/maven</url>
+      <url>https://repo.marketcetera.org/maven</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
