--- a/webui/pom.xml
+++ b/webui/pom.xml
@@ -15,6 +15,9 @@
   <name>Web UI Parent</name>
   <properties>
     <vaadin.version>7.7.6</vaadin.version>
+    <vaadin.theme>mytheme</vaadin.theme>
+    <gwt.version>2.8.2</gwt.version>
+    <gwt.plugin.version>2.8.2</gwt.plugin.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -24,6 +27,16 @@
         <version>${vaadin.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+	<groupId>com.vaadin</groupId>
+	<artifactId>vaadin-client-compiled</artifactId>
+	<version>${vaadin.version}</version>
+      </dependency>
+      <dependency>
+	<groupId>com.vaadin</groupId>
+	<artifactId>vaadin-client-compiler</artifactId>
+	<version>${vaadin.version}</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
