--- a/webui/webui-marketdata/pom.xml
+++ b/webui/webui-marketdata/pom.xml
@@ -17,8 +17,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
-    <gwt.version>2.8.2</gwt.version>
-    <gwt.plugin.version>2.8.2</gwt.plugin.version>
   </properties>
   <dependencies>
     <dependency>
@@ -42,16 +40,36 @@
       <artifactId>vaadin-client</artifactId>
       <scope>provided</scope>
     </dependency>
+    <!--dependency>
+      <groupId>com.vaadin</groupId>
+      <artifactId>vaadin-client-compiled</artifactId>
+    </dependency-->
+    <dependency>
+      <groupId>com.vaadin</groupId>
+      <artifactId>vaadin-client-compiler</artifactId>
+    </dependency>
     <dependency>
       <groupId>com.googlecode.gwt-charts</groupId>
       <artifactId>gwt-charts</artifactId>
       <version>0.9.10</version>
       <scope>runtime</scope>
     </dependency>
+    <!--dependency>
+      <groupId>com.google.gwt</groupId>
+      <artifactId>gwt-user</artifactId>
+      <version>${gwt.version}</version>
+      <scope>runtime</scope>
+    </dependency-->
+    <dependency>
+      <groupId>com.google.web.bindery</groupId>
+      <artifactId>requestfactory-server</artifactId>
+      <version>2.6.1</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
-      <plugin>
+      <!--plugin>
 	<groupId>com.vaadin</groupId>
 	<artifactId>vaadin-maven-plugin</artifactId>
 	<configuration>
@@ -63,7 +81,7 @@
           <style>OBF</style>
           <compileReport>true</compileReport>
           <runTarget>http://localhost:8080/</runTarget>
-          <widgetsetMode>cdn</widgetsetMode>
+          <widgetsetMode>local</widgetsetMode>
 	</configuration>
 	<executions>
           <execution>
@@ -74,7 +92,7 @@
             </goals>
           </execution>
 	</executions>
-      </plugin>
+      </plugin-->
       <!--plugin>
         <groupId>com.vaadin</groupId>
         <artifactId>vaadin-maven-plugin</artifactId>
