--- a/packages/server-package/src/test/cmd_exec/conf/application.properties
+++ b/packages/server-package/src/test/cmd_exec/conf/application.properties
@@ -243,15 +243,16 @@ admin.supervisor-permissions[0].subject-names=trader
 #
 # Database settings
 #
-spring.datasource.url=jdbc:postgresql://127.0.0.1/metc
-spring.datasource.username=metc
-spring.datasource.password=pw4metc
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${metc.jdbc.url}
+spring.datasource.username=${metc.jdbc.user}
+spring.datasource.password=${metc.jdbc.password}
+spring.datasource.driver-class-name=${metc.jdbc.driver}
+spring.datasource.
 spring.datasource.pool-size=30
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 spring.jpa.show-sql=false
-spring.jpa.hibernate.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 #logging.level.org.springframework.transaction.interceptor=TRACE
 # uncomment these two lines to create a schema file
