--- a/modules/marketdata/marketdata-recorder/src/test/resources/application.properties
+++ b/modules/marketdata/marketdata-recorder/src/test/resources/application.properties
@@ -15,10 +15,10 @@ metc.session.life.mills=-1
 #
 # Database Settings
 #
-spring.datasource.url=jdbc:postgresql://127.0.0.1/metc
-spring.datasource.username=metc
-spring.datasource.password=pw4metc
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${metc.jdbc.url}
+spring.datasource.username=${metc.jdbc.user}
+spring.datasource.password=${metc.jdbc.password}
+spring.datasource.driver-class-name=${metc.jdbc.driver}
 spring.datasource.pool-size=30
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 spring.jpa.show-sql=false
